<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main2"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:rowCount="8"
    android:columnCount="2"
    tools:context=".MainActivity"
    android:background="#ECDFCC">

    <TextView
        android:id="@+id/tvFirst"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/conv"
        android:gravity="center"
        android:layout_row="0"
        android:layout_column="0"
        android:layout_columnSpan="2"
        android:fontFamily="@font/handjet_semibold"
        android:textSize="40dp"
        android:padding="20dp"
        android:textColor="#ECDFCC"
        android:background="#1E201E"/>
    <RadioGroup
        android:id="@+id/tipoGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_horizontal"
        android:layout_row="1"
        android:layout_column="0"
        android:layout_columnSpan="2">
            <RadioButton
                android:id="@+id/rbtnOpc1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/opcion1"
                android:paddingRight="12dp"
                android:textColor="#3C3D37"
                android:buttonTint="@color/radio_button_selector"
                android:buttonTintMode="multiply"
                android:checked="true"/>
            <RadioButton
                android:id="@+id/rbtnOpc2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/opcion2"
                android:paddingRight="12dp"
                android:textColor="#3C3D37"
                android:buttonTint="@color/radio_button_selector"
                android:buttonTintMode="multiply"/>
            <RadioButton
                android:id="@+id/rbtnOpc3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/opcion3"
                android:paddingRight="12dp"
                android:textColor="#3C3D37"
                android:buttonTint="@color/radio_button_selector"
                android:buttonTintMode="multiply"/>
    </RadioGroup>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/unidad"
        android:gravity="center"
        android:layout_row="2"
        android:layout_column="0"
        android:paddingTop="20dp"
        android:paddingBottom="20dp"
        android:layout_columnSpan="2"
        android:textSize="17dp"
        android:textColor="#ECDFCC"
        android:background="#1E201E"/>
    <RadioGroup
        android:id="@+id/firstGroup"
        android:layout_width="115dp"
        android:layout_height="wrap_content"
        android:layout_row="3"
        android:layout_column="0"
        android:layout_marginLeft="20dp">

        <RadioButton
            android:id="@+id/rbtnFOpc1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/opcionF1"
            android:textColor="#3C3D37"
            android:buttonTint="@color/rbSelected"
            android:buttonTintMode="multiply"
            android:checked="true"/>
        <RadioButton
            android:id="@+id/rbtnFOpc2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/opcionF2"
            android:buttonTint="@color/rbSelected"
            android:buttonTintMode="multiply"
            android:textColor="#3C3D37"/>
        <RadioButton
            android:id="@+id/rbtnFOpc3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/opcionF3"
            android:buttonTint="@color/rbSelected"
            android:buttonTintMode="multiply"
            android:textColor="#3C3D37"/>

    </RadioGroup>
    <EditText
        android:id="@+id/input"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/ingrese"
        android:inputType="numberDecimal"
        android:maxLength="13"
        android:layout_row="3"
        android:layout_column="1"
        android:layout_margin="50dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/unidad2"
        android:gravity="center"
        android:layout_row="4"
        android:layout_column="0"
        android:paddingTop="20dp"
        android:paddingBottom="20dp"
        android:layout_columnSpan="2"
        android:textSize="17dp"
        android:textColor="#ECDFCC"
        android:background="#1E201E"/>
    <RadioGroup
        android:id="@+id/secondGroup"
        android:layout_width="115dp"
        android:layout_height="wrap_content"
        android:layout_row="5"
        android:layout_column="0"
        android:layout_marginLeft="20dp">

        <RadioButton
            android:id="@+id/rbtnSOpc1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/opcionF1"
            android:buttonTint="@color/rbSelected"
            android:buttonTintMode="multiply"
            android:textColor="#3C3D37"/>
        <RadioButton
            android:id="@+id/rbtnSOpc2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/opcionF2"
            android:textColor="#3C3D37"
            android:buttonTint="@color/rbSelected"
            android:buttonTintMode="multiply"
            android:checked="true"/>
        <RadioButton
            android:id="@+id/rbtnSOpc3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/opcionF3"
            android:buttonTint="@color/rbSelected"
            android:buttonTintMode="multiply"
            android:textColor="#3C3D37"/>

    </RadioGroup>
    <TextView
        android:id="@+id/resultado"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/inputPre"
        android:textSize="20dp"
        android:layout_margin="60dp"
        android:layout_row="5"
        android:layout_column="1"/>
    <Button
        android:id="@+id/btnConv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btnConvertir"
        android:backgroundTint="@color/rbSelected"
        android:textColor="@color/rbUnselected"
        android:textSize="18sp"
        android:layout_row="6"
        android:layout_column="0"
        android:layout_columnSpan="2"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:background="@drawable/square_button"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/author"
        android:layout_margin="65dp"
        android:layout_row="7"
        android:fontFamily="@font/kalam_regular"
        android:layout_column="0"
        android:layout_columnSpan="2"
        android:layout_gravity="center"/>

</GridLayout>