<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <CheckBox
        android:id="@+id/checkBox"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_weight="1"
        android:text="@string/seleccioname"
        android:checked="false" />

    <RadioGroup
        android:id="@+id/rGroup"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1" >

        <RadioButton
            android:id="@+id/rbtnOpc1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/opcion1" />

        <RadioButton
            android:id="@+id/rbtnOpc2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/opcion2" />

    </RadioGroup>

</LinearLayout>